--- a/Desafio6/public/index.html
+++ b/Desafio6/public/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="/socket.io/socket.io.js"></script>
+  <script src="./socket.io/socket.io.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.js"></script>
   <link rel="stylesheet" href="/assets/css/styles.css">
   <title>Document</title>
