--- a/Desafio8/public/index.html
+++ b/Desafio8/public/index.html
@@ -30,9 +30,8 @@
         <input id="messagesFormBtn" type="submit" value="Enviar">
     </form>
     <hr>
-    <div id="listaMensajes" class="messages-list_container">
-
-    </div>
+    
+    <div id="listaMensajes" class="messages-list_container"></div>
 
     <script src="/js/main.js"></script>
 </body>
