segunda entrega proyecto final

--- a/SegundaEntrega/public/index.html
+++ b/SegundaEntrega/public/index.html
@@ -9,11 +9,11 @@
         <script type="module" src="./js/index.js"></script>
         <link rel="stylesheet" href="./style/index.css">
         
-        <title>Primer Entrega!</title>
+        <title>Segunda Entrega</title>
     </head>
 
     <body>
-        <h1>Primer Entrega!</h1>
+        <h1>Segunda Entrega</h1>
 
         <button id="getProductsBtn">Ver Productos</button>
 
